# anita

./: .gitignore  Cargo.toml  LICENSE  README.md
anita_core/: Cargo.toml
anita_core/src/: function_manager.rs  lib.rs
anita_core/src/jit/: mod.rs  translator.rs
anita_core/src/jit/frontend/: mod.rs
anita_core/src/jit/types/: f32.rs  f32x4.rs  f64.rs  mod.rs
anita_core/tests/: frontend.rs  operators.rs
anita_macros/: .gitignore  Cargo.toml
anita_macros/src/: lib.rs
anita_macros/tests/: test.rs
anita_macros/tests/expand/: function_manager_attr_test.rs
integration_tests/: Cargo.toml
integration_tests/tests/: integration.rs
internal_macros/: .gitignore  Cargo.toml
internal_macros/src/: lib.rs
internal_macros/tests/: test.rs
internal_macros/tests/expand/: attribute.rs  function_manager_attr.rs  function_manager_empty_test.rs  link_cranelift_macro.rs
src/: default_functions.rs  function_manager.rs  lib.rs
src/jit/: compiled_function.rs  mod.rs  translator.rs
src/jit/frontend/: mod.rs
src/jit/math/: functions.rs
src/jit/types/: mod.rs
tests/: f64.rs  frontend.rs  functions.rs  integration.rs  integration_evalexpr.rs  integration_rust.rs  operators.rs  simd.rs
