[package]
name = "anita"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["anita_core", "anita_macros"]

[dependencies]
anita_macros = { path = "anita_macros" }
anita_core = { path = "anita_core", optional = true }

[features]
default = ["anita_core"]
selinux-fix = ["anita_core/selinux-fix"]
no-default-functions = []
simd = ["anita_core/simd"]

[target.'cfg(target_os = "linux")'.dependencies]
anita_core = { path = "anita_core",  features = ["selinux-fix"]}